# liveguard-ai

./: .gitignore  PoC_AI员工控制台_可执行实施计划.md  netlify.toml  守播LiveGuard_商业计划书_v1.0.md  守播LiveGuard_商业计划书_v2.0.md  守播LiveGuard_商业计划书_v3.0.md  守播LiveGuard_商业计划书_v4.0.md  技术路线v2_全可视化数字员工系统.md  技术路线v3_专业极简版.md  投智云InvestMind_商业计划书_v1.0.md  智能体可视化运行界面_开源项目调研报告.md
.github/workflows/: ci.yml  netlify-smoke.yml
investmind/: Makefile  README.md
investmind/bp_build/: bp_section_00_executive.md  bp_section_01_company.md  bp_section_02_market.md  bp_section_03_competition.md  cover.html  (+14 more)
liveguard/: .dockerignore  .gitignore  LICENSE  Makefile  README.md  build.ps1  package.json  pnpm-workspace.yaml  pyproject.toml
liveguard/.github/workflows/: ci.yml
liveguard/algo/: README.md  pyproject.toml
liveguard/algo/liveguard_algo/: __init__.py  pipeline.py
liveguard/algo/liveguard_algo/action/: __init__.py  pose.py
liveguard/algo/liveguard_algo/audio/: __init__.py  speaker.py  vad.py
liveguard/algo/liveguard_algo/face/: __init__.py  detector.py  embedder.py
liveguard/algo/liveguard_algo/fusion/: __init__.py  cheat_fsm.py  explainer.py  state_machine.py
liveguard/algo/liveguard_algo/learning/: __init__.py  hard_example_miner.py
liveguard/algo/liveguard_algo/liveness/: __init__.py  liveness.py
liveguard/algo/liveguard_algo/person/: __init__.py  detector.py  reid.py
liveguard/algo/liveguard_algo/runtime/: __init__.py  registry.py  session.py
liveguard/algo/tests/: test_cheat_fsm.py  test_pipeline.py  test_state_machine.py
liveguard/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
liveguard/backend/alembic/: env.py
liveguard/backend/alembic/versions/: 20260420_0001_init_core_schema.py  20260420_0002_postgres_enhancements.py
liveguard/backend/liveguard_backend/: __init__.py  config.py  logging_setup.py  main.py
liveguard/backend/liveguard_backend/api/: __init__.py  deps.py  schemas.py
liveguard/backend/liveguard_backend/api/routers/: alerts.py  auth.py  health.py  ingest.py  streams.py  tenants.py
liveguard/backend/liveguard_backend/db/: __init__.py  orm.py  repositories.py  session.py
liveguard/backend/liveguard_backend/domain/: __init__.py  enums.py  models.py
liveguard/backend/liveguard_backend/infra/: __init__.py  bus.py  cache.py  metrics.py
liveguard/backend/liveguard_backend/security/: __init__.py  auth.py  rbac.py
liveguard/backend/liveguard_backend/services/: __init__.py  alert_manager.py  ingest_service.py  notify_dispatcher.py
liveguard/backend/scripts/: seed.py
liveguard/backend/tests/: conftest.py  test_api_smoke.py  test_ingest_flow.py
liveguard/bp_build/: _bp.html  assemble_md.py  bp3_section_00_executive.md  bp3_section_01_business_model.md  bp3_section_02_market.md  bp3_section_05_pricing_unit.md  bp3_section_08_resources.md  bp3_section_10_valuation.md  bp3_section_11_success_probability.md  bp3_section_12_funding.md  bp3_section_13_risk.md  bp3_section_14_team.md  bp3_section_99_appendix.md  bp4_section_00_executive.md  bp4_section_01_business_model.md  bp4_section_03_competition.md  bp4_section_04_product.md  bp4_section_06_gtm.md  bp4_section_07_ops.md  bp4_section_08_resources.md  bp4_section_09_finance.md  bp4_section_11_success_probability.md  bp4_section_12_funding.md  bp4_section_13_risk.md  bp4_section_14_team.md  bp4_section_15_roadmap.md  bp4_section_99_appendix.md  bp_section_00_executive.md  bp_section_01_company.md  bp_section_02_market.md  bp_section_03_competition.md  bp_section_04_product.md  bp_section_05_business.md  bp_section_06_gtm.md  bp_section_07_ops.md  bp_section_08_finance.md  bp_section_09_funding.md  bp_section_10_risk.md  bp_section_11_team.md  bp_section_12_roadmap.md  (+6 more)
liveguard/console/: .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
liveguard/console/src/app/: globals.css  layout.tsx  page.tsx
liveguard/console/src/app/alerts/: page.tsx
liveguard/console/src/app/hosts/: page.tsx
liveguard/console/src/app/realtime/: page.tsx
liveguard/console/src/app/settings/: page.tsx
liveguard/console/src/app/streams/: page.tsx
liveguard/console/src/app/streams/[id]/: page.tsx
liveguard/console/src/components/: KpiCard.tsx  SeverityBadge.tsx  StateDot.tsx
liveguard/console/src/lib/: api.ts
liveguard/docs/: README.md  architecture.md  compliance.md  deployment.md
liveguard/docs/images/: README.md
liveguard/edge/: README.md  pyproject.toml
liveguard/edge/liveguard_edge/: __init__.py  agent.py  cli.py  source.py  uploader.py
liveguard/edge/tests/: test_agent.py
liveguard/extension/: README.md  manifest.json
liveguard/extension/icons/: README.md
liveguard/extension/src/: background.js  content.js  options.html  options.js  popup.html  popup.js
liveguard/infra/: README.md  docker-compose.yml
liveguard/infra/db/init/: 01-extensions.sql
liveguard/infra/prometheus/: prometheus.yml
liveguard/mobile/: .gitignore  App.tsx  README.md  app.json  package.json  tsconfig.json
liveguard/mobile/src/: api.ts
liveguard/mobile/src/screens/: AlertDetailScreen.tsx  AlertsScreen.tsx
liveguard/models/python_models/: 01_market_sizing.py  02_unit_economics.py  03_roi_merchant.py  04_slo_latency_budget.py  05_alerts_capacity_erlangc.py  06_dedup_suppression_sim.py  07_growth_cohort.py  08_pricing_model.py  09_cohort_retention.py  10_financial_projections.py  11_fundraising_dilution.py  12_valuation_dcf.py  13_valuation_comparables.py  14_monte_carlo_valuation.py  15_sensitivity_analysis.py  16_tech_benchmark.py  17_resource_requirements.py  18_angel_returns.py  19_success_probability.py  20_business_model_layers.py  21_personal_kelly_founder.py  README.md  _common.py  data_sources.py  run_all.py
liveguard/notify/: Dockerfile  README.md  pyproject.toml
liveguard/notify/liveguard_notify/: __init__.py  config.py  dispatcher.py  main.py
liveguard/notify/liveguard_notify/channels/: __init__.py  base.py  dingtalk.py  feishu.py  push.py  sms.py  voice.py  webhook.py  wework.py
liveguard/notify/tests/: test_channels.py
(+19 files in other folders)
