[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "liveguard-algo"
version = "1.0.0"
description = "守播 LiveGuard AI · 多模态算法引擎 (Face/Person/Re-ID/Liveness/Action/Audio + DFSM 决策融合)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "LiveGuard AI Algo Team", email = "algo@liveguard.ai" }]
keywords = ["computer-vision", "live-streaming", "multimodal", "anti-cheat"]

dependencies = [
    "numpy>=1.26",
    "pydantic>=2.7",
    "structlog>=24.1",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
inference = [
    "onnxruntime>=1.18",
    "opencv-python-headless>=4.10",
    "scipy>=1.13",
    "pillow>=10.3",
]
training = [
    "torch>=2.3",
    "torchvision>=0.18",
    "torchaudio>=2.3",
    "timm>=1.0",
    "transformers>=4.42",
]
audio = [
    "soundfile>=0.12",
    "librosa>=0.10",
    "silero-vad>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["liveguard_algo"]
