[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "liveguard-backend"
version = "1.0.0"
description = "守播 LiveGuard AI · 云端后端（FastAPI + Postgres + Redis + Kafka）"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "LiveGuard AI Backend Team", email = "backend@liveguard.ai" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "aiokafka>=0.11",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7.4",
    "structlog>=24.1",
    "orjson>=3.10",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.26",
    "opentelemetry-sdk>=1.26",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.9",
    "email-validator>=2.2",
    "liveguard-algo",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "aiosqlite>=0.20",
]

[project.scripts]
liveguard-api = "liveguard_backend.main:run"

[tool.hatch.build.targets.wheel]
packages = ["liveguard_backend"]

[tool.uv.sources]
liveguard-algo = { path = "../algo", editable = true }
