[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "liveguard-edge"
version = "1.0.0"
description = "守播 LiveGuard AI · 边缘 Agent（拉流 + 轻量推理 + 上行信号）"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "orjson>=3.10",
    "tenacity>=9.0",
    "liveguard-algo",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-httpx>=0.30"]
cv = ["opencv-python-headless>=4.9", "av>=12.0"]

[project.scripts]
liveguard-edge = "liveguard_edge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["liveguard_edge"]

[tool.uv.sources]
liveguard-algo = { path = "../algo", editable = true }
