[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "liveguard-notify"
version = "1.0.0"
description = "守播 LiveGuard AI · 多通道通知服务（SMS/Voice/钉钉/企业微信/飞书/Webhook/APP Push）"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "LiveGuard AI Notify Team", email = "notify@liveguard.ai" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "aiokafka>=0.11",
    "structlog>=24.1",
    "tenacity>=9.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-httpx>=0.30"]

[project.scripts]
liveguard-notify = "liveguard_notify.main:run"

[tool.hatch.build.targets.wheel]
packages = ["liveguard_notify"]
